[project]
name = "radish_bdd"
version = "0.18.2"
authors = [{ name = "Timo Furrer", email = "tuxtimo+radish@gmail.com" }]
description = "Behaviour-Driven-Development tool for Python"
readme = "README.md"
requires-python = ">=3.7,<4.0"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Topic :: Education :: Testing",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "importlib_metadata>=6.0.0; python_version < '3.8'",
    "colorful>=0.5.6",
    "docopt>=0.6.2",
    "tag-expressions>=2.0.0",
    "parse-type>=0.6.4",
    "humanize>=4.6.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["radish"]


[project.scripts]
radish = "radish.main:main"
radish-test = "radish.testing.__main__:main"

[project.urls]
Homepage = "https://radish-bdd.github.io"
Download="https://github.com/radish-bdd/radish"
Changelog="https://github.com/radish-bdd/radish/CHANGELOG.md"
Documentation = "https://radish-bdd.github.io"
Bug = "https://github.com/radish-bdd/radish/issues"

[project.optional-dependencies]
bddxml = ["lxml>=5.3.0"]
ipython-debugger = ["ipython>=7.34.0"]
coverage = ["coverage[toml]~=7.2.7"]
testing = ["pyyaml>=6.0.1"]

[tool.ruff]
line-length = 120
# Rule descriptions: https://docs.astral.sh/ruff/rules/
# TODO enable more linter
#lint.select = ["B", "N", "C90", "ARG", "PL", "RUF", "UP"]
lint.select = ["E", "F", "W", "I", "C4"]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]
lint = [
    "ruff~=0.9.7",
]
test = [
    "freezegun==1.5.1",
    "pytest==7.4.4",
    "pytest-mock==3.11.1",
    "pyyaml==6.0.1"
]
docs = [
    "sphinx==5.3.0",
]

[tool.ruff.lint.per-file-ignores]
# We use magic values in tests
"tests/*" = ["PLR2004"]
# There is a lot to look at with this rule,
# not enforced yet
"*" = ["F401"]

[tool.coverage.run]
source = ["radish"]
parallel = true
omit = [
    "tests/*",
    "radish/vendor/*",
]
[tool.coverage.paths]
tox = [
    "radish/",
    ".tox/py*/lib/python*/site-packages/radish/",
]
