[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E203,W503,W504

[tool:pytest]
testpaths = tests/ src/

[isort]
known_first_party=radish
known_third_party=colorful,docopt,example,freezegun,humanize,lark,parse_type,pytest,setuptools,steps_1,steps_2,tagexpressions,yaml
multi_line_output=3
