[metadata]
name = radish-bdd
description = Behavior-Driven-Development Tool for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Timo Furrer
author_email = tuxtimo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education :: Testing
    Topic :: Software Development
    Topic :: Software Development :: Testing
project_urls =
    homepage = https://github.com/radish-bdd/radish
    changelog = https://github.com/radish-bdd/radish/blob/master/CHANGELOG.rst

[options]
packages = find:
python_requires = >=3.6
install_requires =
    lark>=1.0.0
    click
    colorful>=0.5.4
    tag-expressions>=1.0.0
    parse_type>0.4.0
    humanize
    PyYAML
package_dir =
    =src
include_package_data = True


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    radish = radish.__main__:cli
    radish-test = radish.step_testing.__main__:test
    radish-parser = radish.parser.__main__:cli

[options.extras_require]
xml =
    lxml
ipython-debugger =
    ipython
coverage =
    coverage
docs =
    sphinx
    towncrier
tests =
    freezegun
    coverage[toml]
    pytest
    pytest-mock
    lxml
    PyYAML
dev =
    freezegun
    coverage[toml]
    pytest
    pytest-mock
    lxml
    PyYAML
    sphinx
    towncrier
    pre-commit

[flake8]
max-line-length = 100
ignore = E203,W503,W504

[tool:pytest]
testpaths = tests/ src/
